<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/contactbg"
    tools:context="sg.com.kaplan.cityweather.Contact">


    <TextView
        android:id="@+id/ttcontact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textAlignment="viewStart"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="send_click"
        android:text="@string/send" />
</LinearLayout>
